2005-02-06  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* avoid last lines in tabulars (more beautiful)
	* return key in sweep edit dialog

2005-01-28  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* selecting graphs works again
	* fixed small bug causing wrong painting symbol position

2005-01-09  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* "acfrequency" in component edit menu

2005-01-09  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* menu on right mouse button
	* several small improvements
	* Hungarian translation

2004-12-29  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* scroll bar for tabular diagrams
	* update diagrams if display page is the same as schematic
	page
	* better handling of tabular diagrams with empty data

2004-12-27  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* component edit dialog extented to show special page for
	simulations
	* fixed small bug that placed text of subcircuits to wrong
	position after undo/load

2004-12-14  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* new routines to kill processes when Qucs is terminated

2004-12-14  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* add nodeset support (initial node voltages) to the label
	dialog
	* fixed small bug in painting node labels
	* fixed small bug in showing manual log scale
	* manual diagram limits can now be max < min

2004-12-04  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed some bugs in diagram clipping algorithm
	* graphs can be painted with stars, circles and arrows

2004-12-01  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* disabled rotation angle in graphictext dialog if in
	symbol mode

2004-11-23  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* wire label a little bit more beautiful
	* manual diagram limits for all circumstances
	* changed markers accordingly
