@@ -27,9 +27,9 @@ RectDiagram::RectDiagram(int _cx, int _cy) : Diagram(_cx, _cy)
 {
   x1 = 10;      // position of label text
   y1 = y3 = 33;
-  x2 = 240;     // initial size of diagram
+  x2 = 240;    // initial size of diagram
   y2 = 160;
-  x3 = 247;
+  x3 = 247;    // with some distance for right axes text
 
   Name = "Rect";
   calcDiagram();
@@ -385,6 +385,7 @@ int RectDiagram::calcDiagram()
   double GridStep, corr, zD, zDstep, GridNum;
   QFontMetrics  metrics(QucsSettings.font);
 
+  x3 = x2 + 7;
   QString tmp;
   bool back = false;
   int  Prec, valid = 0;
